--- a/docs/approach.tex
+++ b/docs/approach.tex
@@ -145,6 +145,14 @@ allowing for a faster computational time, and this type of analysis
 may prove more effective in identifying competition and signalling
 effects than it is in identifying genetic interactions.
 
+We should also consider how to separate our data for calibration and
+validation so as to avoid overfitting \citep{Hawkins2004}. We can treat
+diffusion and signalling parameters (see \ref{eq:5}) as being common
+for sets of plates in identical experimental procedures. For a given
+model we will calibrate these parameters on one plate and validate the
+model on a second plate by assessing whether a good fit is still
+produced.
+
 \begin{Figure}
   \centering
   \includegraphics[width=\linewidth]{DLR00012647-2009-07-02_23-12-49}
@@ -202,7 +210,6 @@ likely to take more computational time and be more difficult to
 implement. Because of the generality of the problem, it is possible
 that computational models of diffusion already exist publicly, and we
 would explore the possibility of using them.
-
 
 \begin{Figure}
   \centering
@@ -279,7 +286,7 @@ If time allows, we wish to compare differences in CANS effects between
 spotted and pinned designs. To do this we change the following
 variables: \(\rho_{0}\), the initial concentration of cells, \(d\),
 the distance between cultures, and \(w\), the diameter of cultures
-(see Figure~\ref{fig:exp_vars}). For pinned cultures, we also have to
+(see Figure~\ref{fig:exp_vars}). For pinned cultures, we have to
 consider that the area of cultures changes with time and account for
 this in our models. We should also account for the statistical
 advantage of pinned QFA, in that roughly five times more cultures can
