--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -240,6 +240,17 @@ eprint = {http://bioinformatics.oxfordjournals.org/content/24/6/880.full.pdf+htm
 journal = {Bioinformatics}
 }
 
+@inproceedings{carson2002,
+  title={Model verification and validation},
+  author={Carson, John S and others},
+  booktitle={Simulation Conference, 2002. Proceedings of the Winter},
+  volume=1,
+  pages={52--58},
+  year=2002,
+  organization={IEEE}
+}
+
+
 @article{Chen2010,
   title={Classic and contemporary approaches to modeling biochemical reactions},
   author={Chen, William W and Niepel, Mario and Sorger, Peter K},
@@ -283,6 +294,17 @@ journal = {Bioinformatics}
   pages={744--750},
   year=2006,
   publisher={The Oxford University Press}
+}
+
+@article{Hawkins2004,
+  title={The problem of overfitting},
+  author={Hawkins, Douglas M},
+  journal={Journal of chemical information and computer sciences},
+  volume=44,
+  number=1,
+  pages={1--12},
+  year=2004,
+  publisher={ACS Publications}
 }
 
 
@@ -467,6 +489,17 @@ year = 2010
    doi = {10.18637/jss.v035.i04},
    url = {https://www.jstatsoft.org/index.php/jss/article/view/v035i04}
 }
+
+@article{Kopelman1988,
+  title={Fractal reaction kinetics},
+  author={Kopelman, Raoul},
+  journal={Science},
+  volume={241},
+  number={4873},
+  pages={1620--1626},
+  year={1988}
+}
+
 
 @Manual{qfa2016,
     title = {qfa: Tools for Quantitative Fitness Analysis (QFA) of Arrayed
