sort final layout

--- a/docs/aims.tex
+++ b/docs/aims.tex
@@ -1,4 +1,3 @@
-
 \section{Aims}
 \label{sec:aims}
 Quantitative fitness analysis (QFA) is a method for inferring the
@@ -9,9 +8,13 @@ responses (see
 QFA, growth curves are automatically captured for arrays of typically
 384 cultures grown on solid agar, with each culture containing an
 individual genetic strain. Plates can contain any combination of
-different strains or repeats. Fitness is a good phenotype for
-measuring GI because...
-
+different strains or repeats. % Microbial organisms have evolved
+% redundancies such that very few single gene knockouts are lethal \cite. due
+% to redundany microbial fitness is a useful phenotype for measuring
+% genetic interaction \cite{Costanzo2010}. If a greater than expected
+% loss of fitness occurs in a double mutant knockout this indicates that
+% the genes are functionally related because very few genes are
+% essential so microbial allowing in the same pathway are expected
 Usually QFA cultures are assumed to grow independently
 (e.g. \citet{Addinall2011}). We aim to test the validity of this
 assumption in a range of different QFA experiments using a new model
@@ -31,9 +34,9 @@ identical mutant strains at different locations. By accounting for
 competition and signalling mechanistically, we hope to learn more
 about the sources of systematic variation in both QFA and SGA
 experiments, and to develop analyses and experimental designs to deal
-with them. We then aim to determine what effect accounting for
-competition and signalling has on variability and rank order of
-fitness estimates using unpublished QFA data for the model organism
+with them. We then aim to determine whether accounting for competition
+and signalling will improve variability and rank order of fitness
+estimates using unpublished QFA data for the model organism
 \textit{Saccharomyces cerevisiae}. We will package all models and
 analysis tools so that they may be used in future studies or to
 reanalyse data from past studies.
