--- a/docs/plan.tex
+++ b/docs/plan.tex
@@ -16,7 +16,7 @@ http://boo62.github.io/ and useful content will be posted soon.
 \graphicspath{{images_low_res/}}
 \begin{Figure}
   \centering
-  \includegraphics[width=\linewidth]{gantt_chart}
+  \includegraphics[width=0.9\linewidth]{gantt_chart}
   \captionof{figure}{Gantt chart showing project plan. * marks important events.}
   \label{fig:gantt_chart}
 \end{Figure}
