--- a/docs/proposal.tex
+++ b/docs/proposal.tex
@@ -3,7 +3,7 @@
 
 % Title info
 \title{Modelling Competition and Signalling Between Microbial Cultures Growing on Solid Agar Surfaces}
-\author{Daniel Boocock}
+\author{Author: Daniel Boocock, Supervisor: Dr Conor Lawless}
 
 \begin{document}
 % Title page.
