--- a/docs/plan.tex
+++ b/docs/plan.tex
@@ -13,10 +13,10 @@ time. If you would like to follow the project a blog is set up at
 http://boo62.github.io/ and useful content will be posted soon.
 
 \end{multicols}
-\graphicspath{{images_low_res/}}
+\graphicspath{{images/}}
 \begin{Figure}
   \centering
-  \includegraphics[width=0.9\linewidth]{gantt_chart}
+  \includegraphics[width=0.98\linewidth]{gantt_chart}
   \captionof{figure}{Gantt chart showing project plan. * marks important events.}
   \label{fig:gantt_chart}
 \end{Figure}
