--- a/TODO.org
+++ b/TODO.org
@@ -1,14 +1,12 @@
-* TODO [1/7]
-  - [ ] Fix negative cells problem
-    - First fix with an equality caused odeint to crash
-    - Could just fix this in the data after running and at the start
-      of the function.
+* TODO [2/8]
+  - [X] Fix negative cells problem
   - [ ] params and neighourhood scope
     - Do I need to pass these each time or can I return a fn inside
       another fn like Conor
   - [ ] Think about the location of functions
     - Would some of them be better in a module?
   - [X] Make an array of subplots
+  - [ ] Make a least squares fit
   - [ ] Write unittests
   - [ ] Compare timings with Conors code
   - [ ] Consider Julia
