--- a/cans/cans/TODO_min.org
+++ b/cans/cans/TODO_min.org
@@ -1,4 +1,4 @@
-* TODO [0/5]
+* TODO [0/2]
   - At the moment b and a do not fit very well. The fit appears to
     improve if observation time is longer.
   - As expected kn and ks do not change from initial values in a
@@ -19,3 +19,4 @@
     secretion of signal.
   - Might be better to compare signal only diffusion and nutrient
     diffusion only models.
+  - [ ] Try model C + N -> 2C + S
